[tool.poetry]
name = "bbw_baseline"
version = "2.0.2"
description = ""
authors = ["Binh Vu <binh@toan2.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
sem-desc = "~3.5.2"
kgdata = "^2.3.1"
ftfy = "^6.1.1"
beautifulsoup4 = "^4.9.3"
pandas = "^1.4.1"
numpy = "^1.22.3"
requests = "^2.28.0"
tqdm = "^4.64.0"
langid = "==1.1.6"
jdcal = "^1.4.1"
click = "^8.1.3"
h5py = "^3.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
